--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"main": "main.js",
-	"type": "module",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"lint": "eslint ."
-	},
-	"keywords": [],
-	"license": "0-BSD",
-	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"esbuild": "0.25.5",
-		"eslint-plugin-obsidianmd": "0.1.9",
-		"globals": "14.0.0",
-		"tslib": "2.4.0",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "8.35.1",
-		"@eslint/js": "9.30.1",
-		"jiti": "2.6.1"
-	},
-	"dependencies": {
-		"obsidian": "latest"
-	}
+    "name": "obsidian-sample-plugin",
+    "version": "1.0.0",
+    "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+    "main": "main.js",
+    "type": "module",
+    "scripts": {
+        "dev": "node esbuild.config.mjs",
+        "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+        "version": "node version-bump.mjs && git add manifest.json versions.json",
+        "lint": "eslint ."
+    },
+    "keywords": [],
+    "license": "GPL-3.0-only",
+    "devDependencies": {
+        "@eslint/js": "9.39.2",
+        "@stylistic/eslint-plugin": "^5.7.1",
+        "@types/node": "^25.1.0",
+        "esbuild": "0.27.2",
+        "eslint-plugin-obsidianmd": "0.1.9",
+        "globals": "17.3.0",
+        "jiti": "2.6.1",
+        "tslib": "2.8.1",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "8.54.0"
+    },
+    "dependencies": {
+        "obsidian": "latest"
+    }
 }
