--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,8 +21,10 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: ${{ matrix.node-version }}
-                  cache: "npm"
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm run lint
-
+            - name: Use pnpm 10.4.1
+              uses: pnpm/action-setup@v4
+              with:
+                  version: 10.4.1
+            - run: pnpm install
+            - run: pnpm build --if-present
+            - run: pnpm lint
