--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@stylistic/eslint-plugin": "^5.7.1",
         "@types/node": "^25.1.0",
         "esbuild": "0.27.2",
+        "eslint": "^9.39.2",
         "eslint-plugin-obsidianmd": "0.1.9",
         "globals": "17.3.0",
         "jiti": "2.6.1",
